--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rt",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
