--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mysql2": "^2.1.0",
     "nunjucks": "^3.2.1",
+    "sequelize": "^6.3.4",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
