--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
     "nunjucks": "^3.2.1",
